classDiagram
    class PawPalApp {
      +collect_owner_pet_info()
      +add_or_edit_task()
      +filter_and_sort_tasks()
      +generate_daily_plan()
      +display_plan()
      +display_conflicts()
    }

    class Owner {
      +name: str
      +available_minutes_per_day: int
      +preferences: dict
      +pets: List~Pet~
      +add_pet(pet: Pet)
      +get_pet(name: str): Pet
      +get_tasks(pet_name: str, completed: bool): List~tuple~
    }

    class Pet {
      +name: str
      +species: str
      +age: int
      +tasks: List~CareTask~
      +add_task(task: CareTask)
      +summary(): str
      +sort_tasks(tasks, key, reverse)$ List~CareTask~
    }

    class CareTask {
      +task_id: str
      +title: str
      +category: str
      +duration_minutes: int
      +priority: Priority
      +notes: str
      +completed: bool
      +recurrence: str
      +last_completed_date: date
      +fixed_time: str
      +mark_complete()
      +is_due(today: date): bool
    }

    class Priority {
      <<enumeration>>
      LOW = 1
      MEDIUM = 2
      HIGH = 3
    }

    class ConstraintProfile {
      +time_available_minutes: int
      +owner_preferences: dict
      +max_tasks_per_day: int
    }

    class Scheduler {
      +START_HOUR: int = 8
      +generate_plan(owner, pet, tasks, constraints): DailyPlan
      +score_task(task, constraints): float
      +explain_choice(task): str
      +sort_by_time(tasks, reverse)$ List~CareTask~
      +detect_conflicts(labeled_tasks)$ List~str~
      +filter_tasks(tasks, completed, category, priority)$ List~CareTask~
      -_time_to_minutes(time_str)$ int
      -_minutes_to_time(minutes): str
      -_minutes_to_time_static(total_minutes)$ str
    }

    class PlanItem {
      +task: CareTask
      +start_time: str
      +end_time: str
      +reason: str
    }

    class DroppedItem {
      +task: CareTask
      +reason: str
    }

    class DailyPlan {
      +date: str
      +items: List~PlanItem~
      +dropped: List~DroppedItem~
      +total_minutes_used: int
      +total_minutes_available: int
      +summary_reasoning: str
      +conflicts: List~str~
      +add_item(item: PlanItem)
      +drop_item(item: DroppedItem)
      +utilization(): float
    }

    Owner "1" --> "1..*" Pet : cares for
    Pet "1" --> "0..*" CareTask : has tasks
    CareTask --> Priority : uses
    Owner "1" --> "1" ConstraintProfile : defines
    Scheduler --> ConstraintProfile : applies
    Scheduler --> DailyPlan : creates
    Scheduler --> CareTask : scores and filters
    DailyPlan "1" o-- "0..*" PlanItem : contains
    DailyPlan "1" o-- "0..*" DroppedItem : tracks excluded
    PlanItem --> CareTask : schedules
    DroppedItem --> CareTask : references
    PawPalApp ..> Owner : inputs
    PawPalApp ..> Pet : inputs
    PawPalApp ..> CareTask : manages
    PawPalApp ..> Scheduler : requests plan
    PawPalApp ..> DailyPlan : displays
